--- a/.github/workflows/build_padavan.yml
+++ b/.github/workflows/build_padavan.yml
@@ -84,7 +84,7 @@ on:
         type: choice
         options: [ '0x312', '0x362', '0x372', '0x3B2' ]
       plugins:
-        description: 'Plugin JSON, e.g. {"ss":"y","xray":"n"}'
+        description: 'Plugin JSON, e.g. {"adbyby":"y"}'
         required: true
         type: string
         default: '{"adbyby":"y"}'
