--- a/.github/workflows/build_padavan.yml
+++ b/.github/workflows/build_padavan.yml
@@ -74,11 +74,11 @@ on:
         options:
           - mipsel-linux-musl
           - mipsel-linux-uclibc
-        default: mipsel-linux-uclibc
+        default: mipsel-linux-musl
       cpufreq:
         description: "Enable CPU Overclocking"
         type: boolean
-        default: false
+        default: true
       mt7621_oc:
         description: "1000Mhz=0x312 1100Mhz=0x362 1120Mhz=0x372 1200Mhz=0x3B2"
         type: choice
