--- a/.github/workflows/build_padavan_multi_targets.yml
+++ b/.github/workflows/build_padavan_multi_targets.yml
@@ -9,7 +9,7 @@ on:
         description: "Comma-separated list of router devices (e.g., K2P,MI-R3G)"
         required: true
         type: string
-        default: K2P,R2100,MI-R3G
+        default: RM2100
       toolchain:
         description: "Select compilation toolchain"
         required: true
@@ -21,21 +21,21 @@ on:
       cpufreq:
         description: "Enable CPU Overclocking"
         type: boolean
-        default: false
+        default: true
       mt7621_oc:
         description: "1000Mhz=0x312 1100Mhz=0x362 1120Mhz=0x372 1200Mhz=0x3B2"
         type: choice
         options: [ '0x312', '0x362', '0x372', '0x3B2' ]
       plugins:
-        description: 'Plugin JSON, e.g. {"ss":"y","xray":"n"}'
+        description: 'Plugin JSON, e.g. {"adbyby":"y"}'
         required: true
         type: string
-        default: '{"ss":"y","v2ray":"n","xray":"y","trojan":"n","ssobfs":"y","smartdns":"y","vlmcsd":"y","ttyd":"n","iperf3":"n"}'
+        default: '{"adbyby":"y"}'
       customization:
         description: 'Customization JSON'
         required: true
         type: string
-        default: '{"lanip":"192.168.2.1","signaccount":"admin","signpassword":"admin","wifi2gssid":"Padavan","wifi2gpsk":"1234567890","wifi5gssid":"Padavan-5G","wifi5gpsk":"1234567890"}'
+        default: '{"lanip":"10.10.10.10","signaccount":"admin","signpassword":"admin","wifi2gssid":"MT7603E","wifi2gpsk":"1234567890","wifi5gssid":"MT7615E","wifi5gpsk":"1234567890"}'
       nanoversion:
         description: "Build Nano Version"
         type: boolean
